Update README.md
initiate first readme file for Edu-Hub project